fix: referral for customer
